# homesec

./: Cargo.toml  README.md  build.rs  mke2fs
src/: crypt.rs  gocryptfs.rs  libcryptsetup.rs  main.rs  namespaces.rs
